src/main/java/org/example/eventplanner/core/error/ErrorCodes.java
package org.example.eventplanner.core.error;

public class ErrorCodes {
    public static final String GUEST_EMAIL_ALREADY_EXISTS = "e001";
    public static final String EVENT_SCHEDULED_DATE_ALREADY_EXISTS = "e002";
    public static final String EVENT_NOT_FOUND = "e003";
    public static final String GUEST_NOT_FOUND = "e004";
    public static final String EVENT_AND_GUEST_MUST_EXIST = "e005";
    public static final String INVALID_EVENT_SCHEDULED_TIME = "e006";
    public static final String EVENT_GUEST_NOT_FOUND = "e007";
}
